Ternary as class draft

--- a/docs/examples/mnist_ternary.ipynb
+++ b/docs/examples/mnist_ternary.ipynb
@@ -17,7 +17,7 @@
     "id": "qLGkt5qiyz4E"
    },
    "source": [
-    "This tutorial demonstrates training a simple Binarized Convolutional Neural Network to classify MNIST digits. This simple network will achieve over 98% accuracy on the MNIST test set. Because this tutorial uses Larq and the [Keras Sequential API](https://www.tensorflow.org/guide/keras), creating and training our model will take just a few lines of code."
+    "This tutorial demonstrates training a simple Ternarised Convolutional Neural Network to classify MNIST digits. "
    ]
   },
   {
@@ -38,19 +38,15 @@
     "colab_type": "code",
     "id": "iAve6DCL4JH4"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/james/Work/ternary_larq_nest/larq-nest/larq/examples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "########\n",
+    "# TEMP for before Merge.\n",
+    "# Remove at PR\n",
+    "########\n",
     "import os\n",
-    "print(os.getcwd())\n",
-    "os.chdir('/home/james/Work/ternary_larq_nest/larq-nest/larq')\n",
+    "#os.chdir('/home/james/Work/Ternary/larq/larq/')\n",
+    "#os.chdir('..')\n",
     "\n",
     "import tensorflow as tf\n",
     "import larq as lq"
@@ -92,35 +88,12 @@
     "id": "Oewp-wYg31t9"
    },
    "source": [
-    "### Create the model\n",
-    "\n",
-    "This will create a simple binarized convolutional network.\n",
-    "\n",
-    "In the forward pass the quantization function\n",
-    "$$\n",
-    "q(x) = \\begin{cases}\n",
-    "    -1 & x < 0 \\\\\\\n",
-    "    1 & x \\geq 0\n",
-    "\\end{cases}\n",
-    "$$\n",
-    "is used to binarize the activations and the latent full precision weights. The gradient of this function is zero almost everywhere which prevents the model from learning.\n",
-    "\n",
-    "To be able to train the model the gradient is instead estimated using the Straight-Through Estimator (STE)\n",
-    "(essentially the binarization is replaced by a clipped identity on the backward pass):\n",
-    "$$\n",
-    "\\frac{\\partial q(x)}{\\partial x} = \\begin{cases}\n",
-    "    1 & \\left|x\\right| \\leq 1 \\\\\\\n",
-    "    0 & \\left|x\\right| > 1\n",
-    "\\end{cases}\n",
-    "$$\n",
-    "\n",
-    "In larq this can be done by using `input_quantizer=\"ste_sign\"` and `kernel_quantizer=\"ste_sign\"`.\n",
-    "Additionally the latent full precision weights are clipped to be between -1 and 1 using `kernel_constraint=\"weight_clip\"`."
+    "### Create the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -128,23 +101,21 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "ste_tern() missing 1 required positional argument: 'x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-ed1a46f69240>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_quantizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_quantizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquantizers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mste_tern\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_constraint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"weight_clip\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQuantConv2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_quantizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"ste_tern\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_constraint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"weight_clip\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_bias\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m28\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m28\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: ste_tern() missing 1 required positional argument: 'x'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/james/Work/Ternary/larq/larq/quantizers.py:168: calling reduce_sum (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n"
      ]
     }
    ],
    "source": [
-    "kwargs = dict(input_quantizer=None, kernel_quantizer=lq.quantizers.ste_tern(), kernel_constraint=\"weight_clip\")\n",
+    "kwargs = dict(input_quantizer=lq.quantizers.SteTern(), kernel_quantizer=lq.quantizers.SteTern(ternary_weight_networks=True), kernel_constraint=\"weight_clip\")\n",
     "\n",
     "model = tf.keras.models.Sequential()\n",
     "\n",
-    "model.add(lq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=\"ste_tern\", kernel_constraint=\"weight_clip\", use_bias=False, input_shape=(28, 28, 1)))\n",
+    "model.add(lq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=lq.quantizers.SteTern(), kernel_constraint=\"weight_clip\", use_bias=False, input_shape=(28, 28, 1)))\n",
     "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
     "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
     "\n",
@@ -177,13 +148,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8-C4XBg4UTJy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "quant_conv2d (QuantConv2D)   (None, 26, 26, 32)        288       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 13, 13, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization (BatchNo (None, 13, 13, 32)        96        \n",
+      "_________________________________________________________________\n",
+      "quant_conv2d_1 (QuantConv2D) (None, 11, 11, 64)        18432     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 5, 5, 64)          192       \n",
+      "_________________________________________________________________\n",
+      "quant_conv2d_2 (QuantConv2D) (None, 3, 3, 64)          36864     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 3, 3, 64)          192       \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 576)               0         \n",
+      "_________________________________________________________________\n",
+      "quant_dense (QuantDense)     (None, 64)                36864     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_3 (Batch (None, 64)                192       \n",
+      "_________________________________________________________________\n",
+      "quant_dense_1 (QuantDense)   (None, 10)                640       \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_4 (Batch (None, 10)                30        \n",
+      "_________________________________________________________________\n",
+      "activation (Activation)      (None, 10)                0         \n",
+      "=================================================================\n",
+      "Total params: 93,790\n",
+      "Trainable params: 93,322\n",
+      "Non-trainable params: 468\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -202,13 +215,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "MdDzI75PUXrG"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "60000/60000 [==============================] - 8s 130us/step - loss: 0.6036 - acc: 0.9233\n",
+      "Epoch 2/10\n",
+      "60000/60000 [==============================] - 6s 102us/step - loss: 0.4631 - acc: 0.9670\n",
+      "Epoch 3/10\n",
+      "60000/60000 [==============================] - 6s 102us/step - loss: 0.4403 - acc: 0.9728\n",
+      "Epoch 4/10\n",
+      "60000/60000 [==============================] - 6s 107us/step - loss: 0.4324 - acc: 0.9762\n",
+      "Epoch 5/10\n",
+      "60000/60000 [==============================] - 6s 103us/step - loss: 0.4249 - acc: 0.9784\n",
+      "Epoch 6/10\n",
+      "60000/60000 [==============================] - 6s 97us/step - loss: 0.4239 - acc: 0.9800\n",
+      "Epoch 7/10\n",
+      "60000/60000 [==============================] - 6s 103us/step - loss: 0.4209 - acc: 0.9803\n",
+      "Epoch 8/10\n",
+      "60000/60000 [==============================] - 6s 103us/step - loss: 0.4178 - acc: 0.9816\n",
+      "Epoch 9/10\n",
+      "60000/60000 [==============================] - 6s 104us/step - loss: 0.4149 - acc: 0.9825\n",
+      "Epoch 10/10\n",
+      "60000/60000 [==============================] - 6s 105us/step - loss: 0.4139 - acc: 0.9832\n",
+      "10000/10000 [==============================] - 1s 57us/step\n"
+     ]
+    }
+   ],
    "source": [
     "model.compile(optimizer='adam',\n",
     "              loss='sparse_categorical_crossentropy',\n",
@@ -231,13 +272,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "0LvwaKhtUdOo"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy 98.15 %\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Test accuracy {test_acc * 100:.2f} %\")"
    ]
