Cleaned up ternarized mnist tutorial

--- a/docs/examples/mnist_ternary.ipynb
+++ b/docs/examples/mnist_ternary.ipynb
@@ -7,7 +7,7 @@
     "id": "DSPCom-KmApV"
    },
    "source": [
-    "# Ternarised Convolutional Neural Networks"
+    "# Ternarized Convolutional Neural Networks"
    ]
   },
   {
@@ -17,7 +17,7 @@
     "id": "qLGkt5qiyz4E"
    },
    "source": [
-    "This tutorial demonstrates training a simple Ternarised Convolutional Neural Network to classify MNIST digits. "
+    "This tutorial demonstrates training a simple Ternarized Convolutional Neural Network to classify MNIST digits. It uses the same model architecture as the Binarized example "
    ]
   },
   {
@@ -93,11 +93,11 @@
    },
    "outputs": [],
    "source": [
-    "kwargs = dict(input_quantizer=lq.quantizers.SteTern(), kernel_quantizer=lq.quantizers.SteTern(ternary_weight_networks=True), kernel_constraint=\"weight_clip\")\n",
+    "kwargs = dict(input_quantizer=lq.quantizers.SteTern(threshold_value=0.05), kernel_quantizer=lq.quantizers.SteTern(threshold_value=0.05), kernel_constraint=\"weight_clip\")\n",
     "\n",
     "model = tf.keras.models.Sequential()\n",
     "\n",
-    "model.add(lq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=lq.quantizers.SteTern(), kernel_constraint=\"weight_clip\", use_bias=False, input_shape=(28, 28, 1)))\n",
+    "model.add(lq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=lq.quantizers.SteTern(threshold_value=0.05), kernel_constraint=\"weight_clip\", use_bias=False, input_shape=(28, 28, 1)))\n",
     "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
     "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
     "\n",
@@ -123,9 +123,7 @@
     "id": "lvDVFkg-2DPm"
    },
    "source": [
-    " Here's the complete architecture of our model.\n",
-    " \n",
-    " Almost all parameter of the network a binarized (either -1 or 1). This will make the network extremly fast when deployed on a embedded device that supports binarized neural networks."
+    "Here's the complete architecture of our model."
    ]
   },
   {
@@ -209,26 +207,26 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 8s 130us/step - loss: 0.6090 - acc: 0.9234\n",
+      "60000/60000 [==============================] - 8s 137us/step - loss: 0.5812 - acc: 0.9297\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 6s 101us/step - loss: 0.4646 - acc: 0.9664\n",
+      "60000/60000 [==============================] - 6s 101us/step - loss: 0.4554 - acc: 0.9675\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 6s 101us/step - loss: 0.4407 - acc: 0.9731\n",
+      "60000/60000 [==============================] - 6s 100us/step - loss: 0.4343 - acc: 0.9746\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 6s 101us/step - loss: 0.4343 - acc: 0.9755\n",
+      "60000/60000 [==============================] - 6s 108us/step - loss: 0.4207 - acc: 0.9783\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 6s 101us/step - loss: 0.4256 - acc: 0.9779\n",
+      "60000/60000 [==============================] - 6s 100us/step - loss: 0.4187 - acc: 0.9795\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 6s 100us/step - loss: 0.4227 - acc: 0.9794\n",
+      "60000/60000 [==============================] - 6s 105us/step - loss: 0.4179 - acc: 0.9811\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 6s 101us/step - loss: 0.4218 - acc: 0.9800\n",
+      "60000/60000 [==============================] - 6s 104us/step - loss: 0.4130 - acc: 0.9822\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 6s 101us/step - loss: 0.4171 - acc: 0.9814\n",
+      "60000/60000 [==============================] - 6s 104us/step - loss: 0.4117 - acc: 0.9827\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 6s 101us/step - loss: 0.4141 - acc: 0.9830\n",
+      "60000/60000 [==============================] - 6s 102us/step - loss: 0.4094 - acc: 0.9837\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 6s 102us/step - loss: 0.4150 - acc: 0.9828\n",
-      "10000/10000 [==============================] - 1s 56us/step\n"
+      "60000/60000 [==============================] - 6s 98us/step - loss: 0.4077 - acc: 0.9847\n",
+      "10000/10000 [==============================] - 1s 53us/step\n"
      ]
     }
    ],
@@ -265,7 +263,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy 98.52 %\n"
+      "Test accuracy 98.90 %\n"
      ]
     }
    ],
