--- a/docs/examples/binarynet_cifar10.ipynb
+++ b/docs/examples/binarynet_cifar10.ipynb
@@ -5,7 +5,7 @@
       "source": [
         "# BinaryNet on CIFAR10\n",
         "\n",
-        "<a href=\"https://mybinder.org/v2/gh/larq/larq/master?filepath=docs%2Fexamples%2Fbinarynet_cifar10.ipynb\"><button data-md-color-primary=\"blue\">Run on Binder</button></a> <a href=\"https://github.com/larq/larq/blob/master/docs/examples/binarynet_cifar10.ipynb\"><button data-md-color-primary=\"blue\">View on GitHub</button></a>\n",
+        "<a href=\"https://mybinder.org/v2/gh/larq/larq/master?filepath=docs%2Fexamples%2Fbinarynet_cifar10.ipynb\"><button data-md-color-primary=\"larq\">Run on Binder</button></a> <a href=\"https://github.com/larq/larq/blob/master/docs/examples/binarynet_cifar10.ipynb\"><button data-md-color-primary=\"larq\">View on GitHub</button></a>\n",
         "\n",
         "In this example we demonstrate how to use Larq to build and train BinaryNet on the CIFAR10 dataset to achieve a validation accuracy approximately 83% on laptop hardware.\n",
         "On a Nvidia GTX 1050 Ti Max-Q it takes approximately 200 minutes to train. For simplicity, compared to the original papers [BinaryConnect: Training Deep Neural Networks with binary weights during propagations](https://arxiv.org/abs/1511.00363), and [Binarized Neural Networks: Training Deep Neural Networks with Weights and Activations Constrained to +1 or -1](http://arxiv.org/abs/1602.02830), we do not impliment learning rate scaling, or image whitening."
