--- a/docs/examples/mnist.ipynb
+++ b/docs/examples/mnist.ipynb
@@ -5,7 +5,7 @@
       "source": [
         "# Introduction to BNNs with Larq\n",
         "\n",
-        "<a href=\"https://mybinder.org/v2/gh/larq/larq/master?filepath=docs%2Fexamples%2Fmnist.ipynb\"><button data-md-color-primary=\"blue\">Run on Binder</button></a> <a href=\"https://github.com/larq/larq/blob/master/docs/examples/mnist.ipynb\"><button data-md-color-primary=\"blue\">View on GitHub</button></a>\n",
+        "<a href=\"https://mybinder.org/v2/gh/larq/larq/master?filepath=docs%2Fexamples%2Fmnist.ipynb\"><button data-md-color-primary=\"larq\">Run on Binder</button></a> <a href=\"https://github.com/larq/larq/blob/master/docs/examples/mnist.ipynb\"><button data-md-color-primary=\"larq\">View on GitHub</button></a>\n",
         "\n",
         "This tutorial demonstrates how to train a simple binarized Convolutional Neural Network (CNN) to classify MNIST digits. This simple network will achieve approximately 98% accuracy on the MNIST test set. This tutorial uses Larq and the [Keras Sequential API](https://www.tensorflow.org/guide/keras), so creating and training our model will require only a few lines of code."
       ],
